--- a/src/app.html
+++ b/src/app.html
@@ -16,5 +16,5 @@
 		// import '/src/app.css'
 	</script>
 </body>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </html>
